objects/ccrz__E_Spec__c.object
<CustomObject>
    <description>Object used to hold product specifications.  These specifications represent groups of attributes which can be in the form of additional product information, information that is searchable, and information that can be used for filtering search results.</description>
    <fields>
        <fullName>ccrz__Desc__c</fullName>
        <description>Description of the specification - not displayed to external users</description>
        <label>Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>The spec name to be displayed in the catalog</description>
        <label>DisplayName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterDisplayName__c</fullName>
        <description>The spec name to be displayed in the filters</description>
        <label>Filter DisplayName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterType__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                    <default>true</default>
                    <label>Checkbox</label>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__IsComparable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the spec is used to do product comparisons .</description>
        <label>IsComparable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__IsVisibleInCatalog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether or not the specification should be displayed to the external users</description>
        <label>Is Visible In Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>The locale that corresponds to this specification, for example en_US</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SelectType__c</fullName>
        <description>Indicates if this is a single/multiple select</description>
        <label>Select Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Ordering of the specifications when displayed as a list.</description>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecGroup__c</fullName>
        <description>Grouping of multiple specifications. This allows you to organization the various specifications into groups so that the external users can see related specifications in a common area.</description>
        <label>SpecGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Cache Memory</fullName>
                </value>
                <value>
                    <fullName>Environmental Parameters</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SpecID__c</fullName>
        <description>The external id for this record</description>
        <externalId>true</externalId>
        <label>Spec ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__UseForFilter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can be Used for Filtering</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Spec</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__SpecGroup__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>